--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -32,6 +32,7 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
+                <li th:if="${session.user} != null"><a href="/publish">发布</a></li>
                 <li th:if="${session.user} == null">
                     <a href="https://github.com/login/oauth/authorize?client_id=e6dedd08826359276765&redirect_uri=http://localhost:8887/callback&scope=user&state=1">登录</a>
                 </li>
@@ -51,28 +52,33 @@
 </nav>
 
 <div class="container-fluid main">
-<!--    将最外面的布局元素 .container 修改为 .container-fluid，就可以将固定宽度的栅格布局转换为 100% 宽度的布局。-->
+    <!--    将最外面的布局元素 .container 修改为 .container-fluid，就可以将固定宽度的栅格布局转换为 100% 宽度的布局。-->
     <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12" >
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
             <hr>
-            <form action="">
+            <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">问题标题（简单扼要）：</label>
-                    <input type="text" class="form-control" id="title" placeholder="问题标题...">
+                    <input type="text" class="form-control" th:text="${title}" id="title" name="title" placeholder="问题标题...">
                 </div>
                 <div class="form-group">
-                    <label for="title">问题补充（必填，请参照右侧提示）：</label>
-                    <textarea name="description" class="form-control" id="description" cols="30" rows="10"></textarea>
+                    <label for="description">问题补充（必填，请参照右侧提示）：</label>
+                    <textarea class="form-control" th:text="${description}" id="description" name="description" cols="30" rows="10"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="title">添加标签：</label>
-                    <input type="text" class="form-control" id="tag" placeholder="标签">
+                    <label for="tag">添加标签：</label>
+                    <input type="text" class="form-control" th:text="${tag}" id="tag" name="tag" placeholder="标签">
                 </div>
-                <button type="submit" class="btn btn-success btn-publish">Submit</button>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:text="${error}"></div>
+                        <button type="submit" class="btn btn-success btn-publish">Submit</button>
+                    </div>
+                </div>
             </form>
         </div>
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" >
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <h3>问题发起指南</h3>
             <ul>
                 <li>问题标题：请用精简的语言描述您发布的问题，不超过25字</li>
