--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -20,7 +20,7 @@
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
             </button>
-            <a class="navbar-brand" href="#">导航</a>
+            <a class="navbar-brand" href="/">导航</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
