--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/testProject.css">
-<!--    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>-->
+    <!--    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>-->
 </head>
 <body>
 <!--<p th:text="'Hello, ' + ${name} + '!'"/>-->
@@ -36,7 +36,7 @@
                 <li th:if="${session.user} == null">
                     <a href="https://github.com/login/oauth/authorize?client_id=e6dedd08826359276765&redirect_uri=http://localhost:8887/callback&scope=user&state=1">登录</a>
                 </li>
-                <li th:unless="${session.user} == null"  class="dropdown">
+                <li th:unless="${session.user} == null" class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -57,7 +57,7 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>发现</h2>
             <hr>
-            <div class="media" th:each="question: ${questions}">
+            <div class="media" th:each="question: ${pagination.questions}">
                 <div class="media-left">
                     <a href="#">
                         <img class="img-rounded avatar" th:src="${question.user.avatarUrl}">
@@ -69,7 +69,7 @@
                     <span class="comment">
                         <span th:text="${question.commentCount}"></span><span>个回复</span>
                         <span th:text="${question.viewCount}"></span><span>次浏览·</span>
-                        <span th:text="${#dates.format(question.getGmtModified(), 'dd MMMM yyyy')}">1小时前</span>
+                        <span th:text="${#dates.format(question.gmtModified, 'dd MMMM yyyy')}"></span>
                     </span>
                 </div>
             </div>
@@ -79,6 +79,36 @@
             <h3>热点话题</h3>
         </div>
     </div>
+
+    <div class="col-lg-6 col-md-0 col-sm-0 col-xs-0"></div>
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            <li>
+                <a th:href="@{/(page=1)}" aria-label="Previous" th:if="${pagination.isShowFirstPage()}">
+                    <span aria-hidden="true">&lt;&lt;</span>
+                </a>
+                <a th:href="@{/(page=${pagination.currentPage}-1)}" aria-label="Previous"
+                   th:if="${pagination.isShowPrevious()}">
+                    <span aria-hidden="true">&lt;</span>
+                </a>
+            </li>
+            <li th:each="page:${pagination.pages}" th:class="${pagination.currentPage == page}?'active':''">
+                <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+            </li>
+            <li>
+                <a th:href="@{/(page=${pagination.currentPage}+1)}" aria-label="Next"
+                   th:if="${pagination.isShowNext()}">
+                    <span aria-hidden="true">&gt;</span>
+                </a>
+                <a th:href="@{/(page=${pagination.totolNumber})}" aria-label="Next"
+                   th:if="${pagination.isShowLastPage()}">
+                    <span aria-hidden="true">&gt;&gt;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+
 </div>
 
 </body>
