add profile questions

--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -36,11 +36,11 @@
                                         <h4 class="modal-title">登陆方式</h4>
                                     </div>
                                     <div class="modal-body" style="text-align:center">
-                                        <a href="http://openapi.baidu.com/oauth/2.0/authorize?response_type=code&client_id=SmzQr4CAxTazikFlwnfCGvmzFLSzlIXL&redirect_uri=http://localhost:8887/baiducallback&scope=basic,netdisk&display=page&qrcode=1">
-                                            <img src="https://www.mawen.co/images/gitee.png">
-                                        </a>
                                         <a href="https://github.com/login/oauth/authorize?client_id=e6dedd08826359276765&redirect_uri=http://localhost:8887/callback&scope=user&state=1">
                                             <img src="https://www.mawen.co/images/github.png">
+                                        </a>
+                                        <a href="http://openapi.baidu.com/oauth/2.0/authorize?response_type=code&client_id=SmzQr4CAxTazikFlwnfCGvmzFLSzlIXL&redirect_uri=http://localhost:8887/baiducallback&scope=basic,netdisk&display=page&qrcode=1">
+                                            <img src="/images/baidu.jpg" height="50px" width="50px">
                                         </a>
                                     </div>
                                     <div class="modal-footer">
@@ -58,8 +58,8 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">消息中心</a></li>
-                            <li><a href="#">个人资料</a></li>
+                            <li><a href="#">个人中心</a></li>
+                            <li><a href="/profile/questions">我的提问</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">退出登录</a></li>
                         </ul>
