--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="">
 <head>
     <title>${sectionName}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -23,7 +23,7 @@
                 <div class="media-left">
                     <a href="#">
                         <img class="img-rounded avatar"
-                             th:src="${question.user} != null ? ${question.user.avatarUrl} : '' ">
+                             th:src="${question.user} != null ? ${question.user.avatarUrl} : '' " alt="">
                     </a>
                 </div>
                 <div class="media-body">
@@ -53,7 +53,8 @@
     <nav aria-label="Page navigation">
         <ul class="pagination">
             <li>
-                <a th:href="@{/profile/questions/(page=1)}" aria-label="Previous" th:if="${pagination.isShowFirstPage()}">
+                <a th:href="@{/profile/questions/(page=1)}" aria-label="Previous"
+                   th:if="${pagination.isShowFirstPage()}">
                     <span aria-hidden="true">&lt;&lt;</span>
                 </a>
                 <a th:href="@{/profile/questions/(page=${pagination.currentPage}-1)}" aria-label="Previous"
