--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,6 +32,7 @@
                     <span class="comment" id="comment">
                         <span th:text="${question.commentCount}"></span><span>个回复</span>
                         <span th:text="${question.viewCount}"></span><span>次浏览·</span>
+
                         <span th:text="${#dates.format(question.gmtModified, 'dd MMMM yyyy')}"></span>
                     </span>
                 </div>
@@ -63,7 +64,7 @@
                    th:if="${pagination.isShowNext()}">
                     <span aria-hidden="true">&gt;</span>
                 </a>
-                <a th:href="@{/(page=${pagination.totolNumber})}" aria-label="Next"
+                <a th:href="@{/(page=${pagination.totalNumber})}" aria-label="Next"
                    th:if="${pagination.isShowLastPage()}">
                     <span aria-hidden="true">&gt;&gt;</span>
                 </a>
