--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading" th:text="${question.title}"></h4>
+                    <h4><a class="media-heading" th:href="@{'/questionDetail/' + ${question.id}}" th:text="${question.title}"></a></h4>
                     <span th:text="${question.description}"></span><br>
                     <span class="comment" id="comment">
                         <span th:text="${question.commentCount}"></span><span>个回复</span>
