--- a/src/main/resources/templates/questionDetail.html
+++ b/src/main/resources/templates/questionDetail.html
@@ -28,7 +28,7 @@
             <hr>
             <p th:text="${questionDetail.tag}"></p>
             <hr>
-            <a th:href="@{/questionDetail/{id}(id=${questionDetail.getId()})}" th:if="${session.user} != null && ${session.user.accountId} == ${questionDetail.user.accountId}">
+            <a th:href="@{/publish/{id}(id=${questionDetail.getId()})}" th:if="${session.user != null && session.user.accountId == questionDetail.user.accountId}">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true" style="color: #999999;font-size: 13px">编辑问题</span>
             </a>
         </div>
