--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -40,7 +40,7 @@
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="list-group" style="margin-top: 15px">
-                <a href="/profile/problems"
+                <a href="/profile/questions"
                    th:class="${section == 'questions'}? 'active list-group-item':'list-group-item'">我的问题</a>
                 <a href="/profile/replies"
                    th:class="${section == 'replies'}? 'active list-group-item':'list-group-item'"><span
