--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,6 +16,7 @@
     <div class="container">
         <h1>出错了!</h1>
         <p th:text="${message}"></p>
+        <p th:text="${status}"></p>
         <p><a class="btn btn-primary btn-lg" href="/" role="button">回到主页</a></p>
     </div>
 </div>
