--- a/src/main/resources/templates/questionDetail.html
+++ b/src/main/resources/templates/questionDetail.html
@@ -36,7 +36,7 @@
             <h3>发起人</h3>
             <div class="media-left">
                 <a href="#">
-                    <img class="img-rounded mySmall"
+                    <img class="img-rounded publish-person"
                          th:src="${questionDetail.user} != null ? ${questionDetail.user.avatarUrl} : '' " alt="">
                 </a>
             </div>
