--- a/src/main/resources/static/css/testProject.css
+++ b/src/main/resources/static/css/testProject.css
@@ -25,13 +25,24 @@ html,body {
 }
 
 .myModal {
-    /*margin-top: 200px;*/
+    margin-top: 200px;
     width: 300px;
-    top:50%;
-    left:50%;
 }
 
 .publish-person {
     width: 25px;
     height: 25px;
 }
+
+.comment-person{
+    margin: 10px;
+}
+
+.media-body{
+    padding-top: 3px;
+}
+
+.comment-area{
+    margin: 10px 0;
+}
+
