--- a/src/main/resources/templates/questionDetail.html
+++ b/src/main/resources/templates/questionDetail.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script src="/js/jquery-3.3.1.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/testProject.js"></script>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/testProject.css">
@@ -20,7 +21,8 @@
             </h4>
             <span class="comment" id="comment">
                 <span>作者：</span><span th:text="${questionDetail.user.name}"></span><span> | </span>
-                <span>发布时间：</span><span th:text="${#dates.format(questionDetail.gmtModified, 'yyyy-MM-dd HH:mm')}"></span><span> | </span>
+                <span>发布时间：</span><span
+                    th:text="${#dates.format(questionDetail.gmtModified, 'yyyy-MM-dd HH:mm')}"></span><span> | </span>
                 <span>阅读数：</span><span th:text="${questionDetail.viewCount}"></span>
             </span>
             <hr>
@@ -28,20 +30,39 @@
             <hr>
             <p th:text="${questionDetail.tag}"></p>
             <hr>
-            <a th:href="@{/publish/{id}(id=${questionDetail.getId()})}" th:if="${session.user != null && session.user.accountId == questionDetail.user.accountId}">
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true" style="color: #999999;font-size: 13px">编辑问题</span>
+            <a th:href="@{/publish/{id}(id=${questionDetail.getId()})}"
+               th:if="${session.user != null && session.user.accountId == questionDetail.user.accountId}">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"
+                      style="color: #999999;font-size: 13px">编辑问题</span>
             </a>
+            <br>
+            <div class="media comment-person">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="img-rounded publish-person"
+                             th:src="${session.user} != null ? ${session.user.avatarUrl} : '' " alt="">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <span th:text="${session.user} != null ? ${session.user.name} : '暂未登录，无法评论'"></span>
+                </div>
+            </div>
+            <input hidden id="id" th:value="${questionDetail.getId()}">
+            <textarea class="form-control comment-area" rows="10" id="comment-content"></textarea>
+            <button type="submit" class="btn btn-success btn-publish" onclick="post()">回复</button>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <h3>发起人</h3>
-            <div class="media-left">
-                <a href="#">
-                    <img class="img-rounded publish-person"
-                         th:src="${questionDetail.user} != null ? ${questionDetail.user.avatarUrl} : '' " alt="">
-                </a>
-            </div>
-            <div class="media-body">
-                <span th:text="${questionDetail.user.name}"></span>
+            <div class="media">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="img-rounded publish-person"
+                             th:src="${questionDetail.user} != null ? ${questionDetail.user.avatarUrl} : '' " alt="">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <span th:text="${questionDetail.user.name}"></span>
+                </div>
             </div>
             <hr>
             <h3>相关问题</h3>
